chore: updates readme and deps

--- a/package.json
+++ b/package.json
@@ -37,15 +37,16 @@
     "@microsoft/api-extractor": "^7.5.2",
     "@rollup/plugin-json": "^4.0.0",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
+    "@types/node": "^13.1.4",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "bundlesize": "^0.18.0",
     "eslint": "^6.2.2",
-    "eslint-config-algolia": "^14.0.0",
+    "eslint-config-algolia": "^15.0.0",
     "eslint-config-prettier": "^6.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-functional": "^1.0.0-rc.2",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-functional": "^2.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-prettier": "^3.1.2",
